--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <h2>I'm a Web developer</h2>
     <hr/>
     <h3><a href="./public/birthday-invite.html">Birthday invite project</a></h3>
-    <img src="./assets/images/Birthday cake.png" height="250" alt="Birthday website preview"/>
+    <img src="./assets/images/birthday-cake.png" height="250" alt="Birthday website preview"/>
     <h3><a href="./public/movie-ranking.html">Movie ranking</a></h3>
-    <img src="./assets/images/Movie ranking.png" height="250" alt="Movie ranking website preview"/>
+    <img src="./assets/images/movie-ranking.png" height="250" alt="Movie ranking website preview"/>
     <hr/>
     <a href="./public/about.html">About me</a>
     <a href="./public/contact.html">Contact me</a>
